Added maven opts so its easier to check different options